--- a/csharp/csharp.csproj
+++ b/csharp/csharp.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Tests\SerializationTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="README.txt" />
+    <None Include="README" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
