--- a/hibernate/.classpath
+++ b/hibernate/.classpath
@@ -2,17 +2,17 @@
 <classpath>
 	<classpathentry excluding="lib/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/library/hibernate/asm.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/asm-attrs.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/cglib-2.1.3.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/commons-collections-2.1.1.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/ehcache-1.2.3.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/hibernate3.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/hsqldb.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/jta.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/log4j-1.2.11.jar"/>
-	<classpathentry kind="lib" path="/library/hibernate/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="lib/asm-attrs.jar"/>
+	<classpathentry kind="lib" path="lib/asm.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-2.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-2.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/ehcache-1.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3.jar"/>
+	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="lib/jta.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.11.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
