git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@462 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/hibernate/.classpath
+++ b/hibernate/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
 	<classpathentry kind="lib" path="lib/jta.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.11.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
