--- a/hibernate2/.classpath
+++ b/hibernate2/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="/hibernate/lib/hsqldb.jar"/>
 	<classpathentry kind="lib" path="/hibernate/lib/jta.jar"/>
 	<classpathentry kind="lib" path="/hibernate/lib/log4j-1.2.11.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
