Remove dependencies to other implementations ("library" and "sax"). Convert README to new style---more or less.
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@521 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xslt/Makefile
+++ b/xslt/Makefile
@@ -1,5 +1,9 @@
-input = ../sax/sampleCompany.xml
-saxon = ../library/saxon/saxon9he.jar
+input = sampleCompany.xml
+saxon = saxon/saxon9he.jar
+
+test:
+	make test-xsltproc
+	make test-saxon
 
 test-xsltproc:
 	xsltproc total.xslt ${input} > total.result
