git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@522 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xslt/Makefile
+++ b/xslt/Makefile
@@ -4,6 +4,7 @@ saxon = saxon/saxon9he.jar
 test:
 	make test-xsltproc
 	make test-saxon
+	rm *.result
 
 test-xsltproc:
 	xsltproc total.xslt ${input} > total.result
