Remove dependencies to other implementations ("library" and "sax"). Convert README to new style---more or less.
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@523 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xquery/Makefile
+++ b/xquery/Makefile
@@ -1,16 +1,20 @@
-input = ../sax/sampleCompany.xml
-saxon = ../library/saxon/saxon9he.jar
-basex = ../library/basex/BaseX61.jar
-javasix = /System/Library/Frameworks/JavaVM.framework/Versions/1.6.0/Commands/java
+input = sampleCompany.xml
+saxon = saxon/saxon9he.jar
+basex = basex/BaseX61.jar
+
+test-all:
+	make test-basex
+	make test-saxon
+	rm -f *.result.xml
 
 test-basex:
-	${javasix} -classpath ${basex} org.basex.BaseX total.xq -i${input} > total.result.xml
+	java -classpath ${basex} org.basex.BaseX total.xq -i${input} > total.result.xml
 	xpath total.result.xml "/result/text()" 2> /dev/null > total.result
 	diff total.result total.baseline
-	${javasix} -classpath ${basex} org.basex.BaseX cut.uf.xq -i${input} > cut.result.xml
-	${javasix} -classpath ${basex} org.basex.BaseX total.xq -icut.result.xml | xpath "/result/text()" 2> /dev/null > cut.result
+	java -classpath ${basex} org.basex.BaseX cut.uf.xq -i${input} > cut.result.xml
+	java -classpath ${basex} org.basex.BaseX total.xq -icut.result.xml | xpath "/result/text()" 2> /dev/null > cut.result
 	diff cut.result cut.baseline
-	${javasix} -classpath ${basex} org.basex.BaseX depth.xq -i${input} > depth.result.xml
+	java -classpath ${basex} org.basex.BaseX depth.xq -i${input} > depth.result.xml
 	xpath depth.result.xml "/result/text()" 2> /dev/null > depth.result
 	diff depth.result depth.baseline
 
@@ -37,7 +41,7 @@ test-saxon:
 	diff depth.result depth.baseline
 
 gui:
-	${javasix} -classpath ${basex} org.basex.BaseXWin
+	java -classpath ${basex} org.basex.BaseXWin
 
 clean:
 	rm -f *~ *.result *.result.xml
