Remove dependencies to other implementations ("library" and "sax"). Convert README to new style---more or less.
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@526 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xquery/Makefile
+++ b/xquery/Makefile
@@ -5,7 +5,7 @@ basex = basex/BaseX61.jar
 test-all:
 	make test-basex
 	make test-saxon
-	rm -f *.result.xml
+	rm -f *.result.xml *.result
 
 test-basex:
 	java -classpath ${basex} org.basex.BaseX total.xq -i${input} > total.result.xml
