schema gets converted and it compiles
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@682 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jgralab/build.xml
+++ b/jgralab/build.xml
@@ -33,7 +33,7 @@
 
   <target name="genschema">
     <rsa2tg xmifile="${xmi.schema.file}" schemafile="${schema.file}" useFromRole="true" removeUnusedDomains="true" useNavigability="true" />
-    <tgschema2java schemaFile="${schema.file}" sourcePath="${src.dir}" implementationMode="standard" withoutTypes="false" subtypeFlag="true" />
+    <tgschema2java schemaFile="${schema.file}" sourcePath="${src.dir}" implementationMode="standard" withoutTypes="false" subtypeFlag="false" />
   </target>
 
   <target name="build" depends="customAntTasks, clean, genschema, compile">
