add RSA model, fix eclipse classpath
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@690 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jgralab/.classpath
+++ b/jgralab/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/horn/uni/repos/101companies/technologies/jgralab/jgralab.jar"/>
+	<classpathentry kind="lib" path="gretl.jar"/>
+	<classpathentry kind="lib" path="jgralab.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
