git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@807 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/csharp/csharp.csproj
+++ b/csharp/csharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Tests\SerializationTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="README" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
