--- a/jgralab/.project
+++ b/jgralab/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jgralab101</name>
+	<name>jgralab</name>
 	<comment></comment>
 	<projects>
 	</projects>
