git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1182 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jdbc/.classpath
+++ b/jdbc/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/library/jdbc/mysql-connector-java-5.1.13/mysql-connector-java-5.1.13-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="mysql-connector-java-5.1.16/mysql-connector-java-5.1.16-bin.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
