Simplified scala2 approach
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1231 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/scala2/project/build.properties
+++ b/scala2/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
-#Sat Mar 26 03:14:40 CET 2011
+#Tue May 24 15:36:39 CEST 2011
 project.organization=org.softlang
 project.name=101companies
-sbt.version=0.7.4
+sbt.version=0.7.7
 project.version=1.0
-build.scala.versions=2.8.1
+build.scala.versions=2.9.0 2.8.1
 project.initialize=false
