cleaning up makefiles in order for them to utilise "technologies" directory instead of locally stored jars
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1462 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xquery/Makefile
+++ b/xquery/Makefile
@@ -1,6 +1,6 @@
 input = sampleCompany.xml
-saxon = saxon/saxon9he.jar
-basex = basex/BaseX61.jar
+saxon = ../../technologies/saxon/saxon9he.jar
+basex = ../../technologies/basex/BaseX61.jar
 
 test-all:
 	make test-basex
