git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1469 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/csharp/csharp.csproj
+++ b/csharp/csharp.csproj
@@ -16,7 +16,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -50,7 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompanyBuilder.cs" />
+    <Compile Include="CompanyRepository.cs" />
     <Compile Include="CompanyModel\Company.cs" />
     <Compile Include="CompanyModel\Department.cs" />
     <Compile Include="CompanyModel\Employee.cs" />
