--- a/wcf/Web.config
+++ b/wcf/Web.config
@@ -11,11 +11,12 @@
           <!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
           <serviceMetadata httpGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true" aspNetCompatibilityEnabled="true" />
+    <!--<serviceHostingEnvironment aspNetCompatibilityEnabled="true" />-->
   </system.serviceModel>
  <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
