--- a/wcf/wcf.csproj
+++ b/wcf/wcf.csproj
@@ -56,7 +56,9 @@
     <Content Include="clientaccesspolicy.xml" />
     <Content Include="CompanyService.svc" />
     <Content Include="crossdomain.xml" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
