--- a/wcf/Web.config
+++ b/wcf/Web.config
@@ -1,6 +1,10 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
 
+  <connectionStrings>
+    <add name="_101companiesConnectionString" connectionString="Data Source=ANDREI-PC\SQLEXPRESS;Initial Catalog=101companies;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
