git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1513 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/linq2Sql/app.config
+++ b/linq2Sql/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="linq2Sql.Properties.Settings._101companiesConnectionString"
-            connectionString="Data Source=ANDREI-PC\SQLEXPRESS;Initial Catalog=101companies;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True"
+            connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=101companies;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
