--- a/linq2Sql/linq2Sql.csproj
+++ b/linq2Sql/linq2Sql.csproj
@@ -49,6 +49,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\technologies\NUnit\2.5.9\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
@@ -59,11 +62,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CompanyDataClasses.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Features.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Tests\FeaturesTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
