git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1516 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/linqToDataSet/linqToDataSet.csproj
+++ b/linqToDataSet/linqToDataSet.csproj
@@ -81,7 +81,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="CompanyDataSet.xsc">
       <DependentUpon>CompanyDataSet.xsd</DependentUpon>
     </None>
