--- a/wpf/app.config
+++ b/wpf/app.config
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="Wpf.Properties.Settings._101companiesConnectionString"
-            connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=101companies;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+  <connectionStrings>
+    <add name="linqToDataSets.Properties.Settings._101companiesConnectionString"
+        connectionString="Data Source=(local)\SQLEXPRESS;Initial Catalog=101companies;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
