git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1520 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/silverlight/silverlight/silverlight.csproj
+++ b/silverlight/silverlight/silverlight.csproj
@@ -139,7 +139,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <Content Include="ServiceReferences.ClientConfig" />
-    <None Include="Service References\CompanyServiceReference\silverlight.CompanyServiceReference.DepartmentDto.datasource">
+    <None Include="Service References\CompanyServiceReference\silverlight.CompanyServiceReference.DepartmentDetailsDto.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\CompanyServiceReference\silverlight.CompanyServiceReference.EmployeeDto.datasource">
