--- a/javaTree/.project
+++ b/javaTree/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>swingNew</name>
+	<name>javaTree</name>
 	<comment></comment>
 	<projects>
 	</projects>
