--- a/xsdDataSet/xsdDataSet.csproj
+++ b/xsdDataSet/xsdDataSet.csproj
@@ -40,11 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Company.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Features.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="xsd\Company.cs">
-      <DependentUpon>Company.xsd</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="xsd\Company.xsc">
