--- a/jsf/jsf/nbproject/private/private.properties
+++ b/jsf/jsf/nbproject/private/private.properties
@@ -2,4 +2,6 @@ deploy.ant.properties.file=C:\\Users\\Tobias\\.netbeans\\7.0\\gfv3-1878391545.pr
 j2ee.platform.is.jsr109=true
 j2ee.server.home=C:/Program Files (x86)/glassfish-3.1/glassfish
 j2ee.server.instance=[C:\\Program Files (x86)\\glassfish-3.1\\glassfish]deployer:gfv3ee6wc:localhost:4848
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\Tobias\\.netbeans\\7.0\\build.properties
