git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2159 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/xsdDataSet/xsdDataSet.csproj
+++ b/xsdDataSet/xsdDataSet.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\technologies\NUnit\2.5.9\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +48,7 @@
     </Compile>
     <Compile Include="Features.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="xsd\Company.xsc">
