jsf hibernate refactoring
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@2270 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jsf/org.softlang.jsf2/nbproject/private/private.properties
+++ b/jsf/org.softlang.jsf2/nbproject/private/private.properties
@@ -1,5 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\Tobias\\.netbeans\\7.0\\gfv3-1878391545.properties
+deploy.ant.properties.file=/home/tzimmer/.netbeans/7.0/gfv3-897446223.properties
+file.reference.mysql-connector-java-5.1.13-bin.jar=/home/tzimmer/mysql-connector-java-5.1.18-bin.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.home=C:/Program Files (x86)/glassfish-3.1/glassfish
-j2ee.server.instance=[C:\\Program Files (x86)\\glassfish-3.1\\glassfish]deployer:gfv3ee6wc:localhost:4848
-user.properties.file=C:\\Users\\Tobias\\.netbeans\\7.0\\build.properties
+j2ee.server.home=/home/tzimmer/glassfish-3.1.1/glassfish
+j2ee.server.instance=[/home/tzimmer/glassfish-3.1.1/glassfish]deployer:gfv3ee6wc:localhost:4848
+user.properties.file=/home/tzimmer/.netbeans/7.0/build.properties
