Added some Makefile support and documentation for MegaL parser.

--- a/languages/MegaL/parser/Makefile
+++ b/languages/MegaL/parser/Makefile
@@ -1,10 +1,15 @@
 geshi = php ../../../technologies/geshi/run.php
 parse = java ${CLASSPATH} megal.parser.Main
+antlr = ../../../technologies/ANTLR/antlr-3.2.jar
 
 run: build
 
 build:
-	@cd megal/parser; make build
+	@cd megal/parser; make build -s
 
 clean:
-	@cd megal/parser; make clean
+	@cd megal/parser; make clean -s
+
+%.parse: build
+	@echo Parsing $*
+	@java -cp .:${antlr} megal.parser.Main $*
