JLocator initial commit

--- a/technologies/JFragmentLocator/Makefile
+++ b/technologies/JFragmentLocator/Makefile
@@ -1,8 +1,10 @@
-none:
+generate:
+	javac -classpath .:lib/gson-1.7.1.jar:lib/javaparser-1.0.8.jar locator/Fragment.java locator/Tupel.java locator/JFragmentLocator.java
 
-test:
-	./locator.py HelloWorld.java fragment.json lines.json
+test: 
+	java -classpath .:lib/gson-1.7.1.jar:lib/javaparser-1.0.8.jar locator/JFragmentLocator HelloWorld.java fragment.json lines.json
 	diff baseline.json lines.json
-
-clean:
-	rm -f lines.json
+	
+clean: 
+	rm -f locator/*.class
+	rm lines.json
