Small update of JFragmentLocator and the makefile. Can somebody check if this compiles on a Mac?

--- a/technologies/JFragmentLocator/Makefile
+++ b/technologies/JFragmentLocator/Makefile
@@ -1,5 +1,5 @@
 generate:
-	javac -classpath .:lib/gson-1.7.1.jar:lib/javaparser-1.0.8.jar locator/Fragment.java locator/Tupel.java locator/JFragmentLocator.java
+	javac -Xlint -classpath .:lib/gson-1.7.1.jar:lib/javaparser-1.0.8.jar locator/Fragment.java locator/Tupel.java locator/JFragmentLocator.java
 
 test: 
 	java -classpath .:lib/gson-1.7.1.jar:lib/javaparser-1.0.8.jar locator/JFragmentLocator HelloWorld.java fragment.json lines.json
