Fixed a little bug in baseline.json (swapped values for from and to) Modified diff command to ignore whitespaces Modified JFragmentLocator - he can now deal with method overloading

--- a/technologies/JFragmentLocator/Makefile
+++ b/technologies/JFragmentLocator/Makefile
@@ -3,7 +3,7 @@ generate:
 
 test: 
 	java -classpath .:lib/gson-1.7.1.jar:lib/javaparser-1.0.8.jar locator/JFragmentLocator HelloWorld.java fragment.json lines.json
-	diff baseline.json lines.json
+	diff -w baseline.json lines.json
 	
 clean: 
 	rm -f locator/*.class
