Working on XmlFragmentLocator

--- a/technologies/XmlFragmentSelector/Makefile
+++ b/technologies/XmlFragmentSelector/Makefile
@@ -1,12 +1,13 @@
-generate: 
+build:
+	make locator/XmlFragmentLocator.class
+
+locator/XmlFragmentLocator.class: locator/*.java Makefile
 	javac locator/*.java
 
-test:
-	java locator/XMLFragmentSelector Company.xsd fragment.xpath lines.json
-	diff -w baseline.json lines.json
-		
-clean:	
-	rm locator/*.class
-	rm lines.json
-	
-	
+test: 
+	./locator.py Company.xsd fragment.xpath lines.json
+	diff baseline.json lines.json
+
+clean: 
+	rm -f locator/*.class
+	rm -f lines.json
